--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: docker-jupyter-extensible:latest
         restart: 'no'
         volumes:
-            - ./notebooks:/home/jovyan/notebooks
+            - ./notebooks:/home/jovyan/
         ports:
             - "8888:8888"
         environment:
