--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         image: jupyter/datascience-notebook:latest
         restart: 'no'
         volumes:
-            - ./notebooks:/home/jovyan/
+            - ./notebook:/home/jovyan/
         ports:
             - "8888:8888"
         environment:
